# icfpc2025

./: .gitignore  CMakeLists.txt  dune  dune-project
ocaml/: Main.ml  api.ml  dune  main.ml
scripts/: create_build_dir.sh  rsync_to.sh  setup_instance.sh
src/: api.cpp  api.hpp  header.hpp  layout.hpp  main.cpp  vis.cpp
